# guardrail

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  TRADEMARK.md  install.sh
.claude/commands/: guardrail-audit.md  guardrail-init.md  guardrail-protect.md  guardrail-signing.md
.cursor/rules/: guardrail.mdc  repo-governance.mdc
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  trademark.yml
.github/workflows/: container.yml  lint.yml  release.yml
.guardrail/: config
lib/: apply.sh  audit.sh  common.sh  list.sh  mcp.sh  protect.sh  render.sh  signing.sh
mcp/: README.md  pyproject.toml  server.py
templates/: CHANGELOG.md.tmpl  CODEOWNERS.tmpl  CODE_OF_CONDUCT.md.tmpl  CONTRIBUTING.md.tmpl  FUNDING.yml.tmpl  NOTICE.tmpl  PULL_REQUEST_TEMPLATE.md.tmpl  SECURITY.md.tmpl  TRADEMARK.md.tmpl  dependabot.yml.tmpl
templates/ISSUE_TEMPLATE/: bug_report.yml.tmpl  config.yml.tmpl  feature_request.yml.tmpl  trademark.yml.tmpl
templates/LICENSE/: Apache-2.0.txt  MIT.txt
templates/workflows/: lint.yml
