[project]
name = "guardrail-mcp"
version = "0.1.0"
description = "MCP server that exposes the guardrail CLI to AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "Nimrod Nyongesa" }]
dependencies = [
  "mcp>=1.0",
]

[project.scripts]
guardrail-mcp = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
